FindBugs: removed unnecessary uses of Boolean constructor, replaced some unnecessary Boolean constructions with valueOf and/or parseBoolean